src/styles.scss
@import "styles/spectate";

// Uncomment the following line before publishing a News story
@import "styles/news-ellipsis";
body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

a,
a:hover,
a:visited {
    color: #0071bc;
}

#map {
    top: 0;
    height: 100vh;
    width: 100vw;
    position: fixed;
}

#header {
    margin: auto;
    width: 100%;
    position: relative;
    z-index: 5;
}

#header h1,
#header h2,
#header p {
    margin: 0;
    padding: 2vh 2vw;
    text-align: center;
}

#header h1{
    font-size: 50px;
}

#footer {
    width: 100%;
    min-height: 5vh;
    padding-top: 2vh;
    padding-bottom: 2vh;
    text-align: center;
    line-height: 25px;
    font-size: 13px;
    position: relative;
    z-index: 5;
}

#features {
    padding-top: 10vh;
    padding-bottom: 10vh;
}

.hidden {
    visibility: hidden;
}

.centered {
    width: 50vw;
    margin: 0 auto;
}

.lefty {
    width: 33vw;
    margin-left: 5vw;
}

.righty {
    width: 33vw;
    margin-left: 62vw;
}

.fully {
    width: 100%;
    margin: auto;
}

.light {
    color: #444;
    background-color: #fafafa;
}

.dark {
    color: #fafafa;
    background-color: #444;
}

.step {
    padding-bottom: 50vh;
    /* margin-bottom: 10vh; */
    opacity: 0.25;
}

.step.active {
    opacity: 0.9;
}

.step div {
    padding: 25px 50px;
    line-height: 30px;
    font-size: 20px;
}

.step img {
    width: 100%;
}

@media (max-width: 750px) {

    .centered,
    .lefty,
    .righty,
    .fully {
        width: 90vw;
        margin: 0 auto;
    }
}

/* Fix issue on mobile browser where scroll breaks  */
.mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan,
.mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan .mapboxgl-canvas {
    touch-action: unset;
}

